# protes-middleware-crypt4gh

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: checks.yaml
crypt4gh_middleware/: decrypt.py  middleware.py
inputs/: alice.pub  alice.sec  bob.pub  bob.sec  decrypt.sh  hello.c4gh  hello.txt  hello2.c4gh  hello3.c4gh  make_uppercase.py
middleware/: decrypt.py
tests/: conftest.py  utils.py
tests/decryption/: test_decrypt.py  test_integration.py
tests/tasks/: task_bodies.py  test_tasks.py
